--- a/index.html
+++ b/index.html
@@ -115,9 +115,20 @@
             <div class="col-sm">
               <ul id="">
                 <span class="badge badge-dark">*Игры*</span>
-                <hr>будет заполнен до 18.02.2019 
- <!--                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li> -->
+                <hr> 
+                <li><img class="icon" src="img/playset.ru.ico" alt="github"><a href="http://www.playset.ru/" target="_blank">playset.ru</a></li>
+                <li><img class="icon" src="img/luckforfree.com.ico" alt="github"><a href="https://luckforfree.com/" target="_blank">luckforfree.com</a></li>
+				<li><img class="icon" src="img/zumagames.ru.ico" alt="github"><a href="http://www.zumagames.ru/" target="_blank">zumagames.ru</a></li>
+                <li><img class="icon" src="img/wargaming.net.ico" alt="github"><a href="https://ru.wargaming.net/" target="_blank">wargaming.net</a></li>
+				<li><img class="icon" src="img/poki.com.ico" alt="github"><a href="https://poki.com/ru" target="_blank">poki.com</a></li>
+                <li><img class="icon" src="img/vseigru.net.ico" alt="github"><a href="http://vseigru.net/" target="_blank">vseigru.net</a></li>
               </ul>
+              <ul id="">
+                <span class="badge badge-dark">*Игры-Букмек.конторы*</span>
+                <hr> 
+                <li><img class="icon" src="img/fan-sport.com.ua.png" alt="github"><a href="https://fan-sport.com.ua?bf=5c6990af5f28e_515561215" target="_blank">fan-sport.com.ua</a></li>
+                <li><img class="icon" src="img/1xbetua.com.png" alt="github"><a href="https://1xbetua.com/?bf=5c6ae4a19a325_515575637" target="_blank">1xbetua.com</a></li>
+              </ul>			  
               <ul id="">
                 <span class="badge badge-dark">*Рынок*</span>
                 <hr>
@@ -139,14 +150,14 @@
                 <li><img class="icon" src="img/xiaomi.ua.ico" alt="github"><a href="https://letyshops.com/r/xiaomi-ua-4qh7st5csy680o" target="_blank">xiaomi.ua</a></li>
                 <li><img class="icon" src="img/apteka911.com.ua.ico" alt="github"><a href="https://letyshops.com/r/apteka-911-4qh7st5ct08woo" target="_blank">apteka911.com.ua</a></li>
               </ul>
+            </div>
+
+            <div class="col-sm">
               <ul id="">
                 <span class="badge badge-dark">*Банкинг*</span>
                 <hr>будет заполнен до 23.02.2019 
                 <!-- <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li> -->
               </ul>
-            </div>
-
-            <div class="col-sm">
               <ul id="">
                 <span class="badge badge-dark">*Комуналка*</span>
                 <hr>будет заполнен до 25.02.2019 
@@ -428,91 +439,75 @@
 
 
         <div class="tab-pane fade" id="games" role="tabpanel" aria-labelledby="games-tab">
-          <div class="row">раздел будет запущен/сформирован до 18.02.2019
+          <div class="row">
 
-            <!--             <div class="col-sm">
+            <div class="col-sm">
               <ul id="">
-                <span class="badge badge-success">*Підгрупа-СИНЯЯ*</span>
+                <span class="badge badge-success">*Азартные*</span>
                 <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+                <li><img class="icon" src="img/playset.ru.ico" alt="github"><a href="http://www.playset.ru/" target="_blank">playset.ru</a></li>
+                <li><img class="icon" src="img/luckforfree.com.ico" alt="github"><a href="https://luckforfree.com/" target="_blank">luckforfree.com</a></li>
+                <li><img class="icon" src="img/onlineigry.com.ico" alt="github"><a href="http://onlineigry.com/" target="_blank">onlineigry.com</a></li>
+                <li><img class="icon" src="img/min2win.ru.ico" alt="github"><a href="http://www.min2win.ru/" target="_blank">min2win.ru</a></li>
               </ul>
               <ul id="">
-                <span class="badge badge-success">*Підгрупа-ЧЕРНАЯ*</span>
+                <span class="badge badge-success">*Логические*</span>
                 <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+                <li><img class="icon" src="img/zumagames.ru.ico" alt="github"><a href="http://www.zumagames.ru/" target="_blank">zumagames.ru</a></li>
+                <li><img class="icon" src="img/logic-games.spb.ru.ico" alt="github"><a href="https://logic-games.spb.ru/" target="_blank">logic-games.spb.ru</a></li>
+                <li><img class="icon" src="img/2048game.com.ico" alt="github"><a href="http://2048game.com/ru/" target="_blank">2048game.com</a></li>
               </ul>
               <ul id="">
-                <span class="badge badge-success">*Підгрупа-ЖЕЛТАЯ*</span>
+                <span class="badge badge-success">*Для КОМПА*</span>
                 <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+                <li><img class="icon" src="img/wargaming.net.ico" alt="github"><a href="https://ru.wargaming.net/" target="_blank">wargaming.net</a></li>
+                <li><img class="icon" src="img/warthunder.ru.ico" alt="github"><a href="https://warthunder.ru/" target="_blank">warthunder.ru</a></li>
+                <li><img class="icon" src="img/torrent-igruha.org.ico" alt="github"><a href="https://torrent-igruha.org/top10-online.html" target="_blank">torrent-igruha.org</a><span class="opisi">нужен TORRENT</span></li>
               </ul>
               <ul id="">
-                <span class="badge badge-success">*Підгрупа-ЗЕЛЕНАЯ*</span>
+                <span class="badge badge-success">*Инфо ТОП*</span>
                 <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
-              <ul id="">
-                <span class="badge badge-success">*Підгрупа-КРАСНАЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+                <li><img class="icon" src="img/onlimegames.ru.png" alt="github"><a href="https://onlimegames.ru/games/top100" target="_blank">onlimegames.ru=top100</a></li>
+                <li><img class="icon" src="img/igrofania.ru.ico" alt="github"><a href="https://igrofania.ru/katalog/brauzernye/" target="_blank">igrofania.ru=katalog</a></li>
+                <li><img class="icon" src="img/mmo13.ru.ico" alt="github"><a href="http://mmo13.ru/rating/top100" target="_blank">mmo13.ru=top100</a></li>
+                <li><img class="icon" src="img/mmoglobus.ru.ico" alt="github"><a href="https://mmoglobus.ru/top-10-luchshih-onlayn-igr-na-pk" target="_blank">mmoglobus.ru=top-10</a></li>
               </ul>
             </div>
 
             <div class="col-sm">
               <ul id="">
-                <span class="badge badge-success">*Підгрупа-СИНЯЯ*</span>
+                <span class="badge badge-success">*Онлайн для детей*</span>
                 <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
-              <ul id="">
-                <span class="badge badge-success">*Підгрупа-ЧЕРНАЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
-              <ul id="">
-                <span class="badge badge-success">*Підгрупа-ЖЕЛТАЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
-              <ul id="">
-                <span class="badge badge-success">*Підгрупа-ЗЕЛЕНАЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
-              <ul id="">
-                <span class="badge badge-success">*Підгрупа-КРАСНАЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+                <li><img class="icon" src="img/poki.com.ico" alt="github"><a href="https://poki.com/ru" target="_blank">poki.com</a></li>
+                <li><img class="icon" src="img/vseigru.net.ico" alt="github"><a href="http://vseigru.net/" target="_blank">vseigru.net</a></li>
+                <li><img class="icon" src="img/igroutka.net.ico" alt="github"><a href="https://igroutka.net/" target="_blank">igroutka.net</a></li>
+                <li><img class="icon" src="img/igrixl.ru.ico" alt="github"><a href="https://www.igrixl.ru/" target="_blank">igrixl.ru</a></li>
+                <li><img class="icon" src="img/game-game.com.ua.ico" alt="github"><a href="http://www.game-game.com.ua/" target="_blank">game-game.com.ua</a></li>
+                <li><img class="icon" src="img/ru.obfog.com.ico" alt="github"><a href="http://www.ru.obfog.com/" target="_blank">ru.obfog.com</a></li>
+                <li><img class="icon" src="img/girlsgogames.ru.ico" alt="github"><a href="http://www.girlsgogames.ru/" target="_blank">girlsgogames.ru</a></li>
+                <li><img class="icon" src="img/onlineguru.ru.ico" alt="github"><a href="http://onlineguru.ru/" target="_blank">onlineguru.ru</a></li>
               </ul>
             </div>
 
             <div class="col-sm">
               <ul id="">
-                <span class="badge badge-success">*Підгрупа-СИНЯЯ*</span>
+                <span class="badge badge-success">*Букмекерская контора - СНГ*</span>
                 <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+                <li><img class="icon" src="img/fan-sport.com.ua.png" alt="github"><a href="https://fan-sport.com.ua?bf=5c6990af5f28e_515561215" target="_blank">fan-sport.com.ua</a></li>
+                <li><img class="icon" src="img/1xbetua.com.png" alt="github"><a href="https://1xbetua.com/?bf=5c6ae4a19a325_515575637" target="_blank">1xbetua.com</a></li>
+                <li><img class="icon" src="img/parimatch.com.ico" alt="github"><a href="https://classic.parimatch.com/" target="_blank">classic.parimatch.com</a></li>
+                <li><img class="icon" src="img/parimatch.com.ico" alt="github"><a href="https://air.parimatch.com/ru/" target="_blank">air.parimatch.com</a></li>
+                <li><img class="icon" src="img/marathonbetweb.win.png" alt="github"><a href="https://www.marathonbetweb.win/su/" target="_blank">marathonbetweb</a></li>
+                <li><img class="icon" src="img/favbet.com.ico" alt="github"><a href="https://www.favbet.com/" target="_blank">favbet.com</a></li>
               </ul>
               <ul id="">
-                <span class="badge badge-success">*Підгрупа-ЧЕРНАЯ*</span>
+                <span class="badge badge-success">*Букмекерская контора - Европа*</span>
                 <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+                <li><img class="icon" src="img/pinnacle.com.ico" alt="github"><a href="https://www.pinnacle.com/ru/" target="_blank">pinnacle.com</a></li>
+                <li><img class="icon" src="img/betfair.com.ico" alt="github"><a href="https://www.betfair.com/ua/" target="_blank">betfair.com</a></li>
+                <li><img class="icon" src="img/sbobet.com.ico" alt="github"><a href="https://www.sbobet.com/" target="_blank">sbobet.com</a></li>
               </ul>
-              <ul id="">
-                <span class="badge badge-success">*Підгрупа-ЖЕЛТАЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
-              <ul id="">
-                <span class="badge badge-success">*Підгрупа-ЗЕЛЕНАЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
-              <ul id="">
-                <span class="badge badge-success">*Підгрупа-КРАСНАЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
-            </div> -->
+            </div>
 
           </div>
         </div>
