--- a/index.html
+++ b/index.html
@@ -76,10 +76,12 @@
 
             <div class="col-sm">
               <ul id="">
-                <span class="badge badge-dark">*Поисковики*</span>
+                <span class="badge badge-dark">*Поиск/Перевод*</span>
                 <hr>
-                <li><img class="icon" src="img/google.ico" alt="google"><a href="https://www.google.com.ua/" target="_blank">Google</a></li>
-                <li><img class="icon" src="img/yandex.ico" alt="yandex"><a href="https://yandex.ua/" target="_blank">Yandex</a><span class="opisi">нужен VPN</span></li>
+                <li><img class="icon" src="img/google.ico" alt="google"><a href="https://www.google.com.ua/" target="_blank">Поиск Google</a></li>
+                <li><img class="icon" src="img/yandex.ico" alt="yandex"><a href="https://yandex.ua/" target="_blank">Поиск Yandex</a><span class="opisi">нужен VPN</span></li>
+                <li><img class="icon" src="img/translate.google.com.ua.png" alt="yandex"><a href="https://translate.google.com.ua/" target="_blank">Переводчик Google</a></li>
+                <li><img class="icon" src="img/translate.ru.png" alt="yandex"><a href="https://www.translate.ru/" target="_blank">Переводчик PROMT</a></li>
               </ul>
               <ul id="">
                 <span class="badge badge-dark">*Социум*</span>
@@ -124,7 +126,7 @@
                 <li><img class="icon" src="img/vseigru.net.ico" alt="github"><a href="http://vseigru.net/" target="_blank">vseigru.net</a></li>
               </ul>
               <ul id="">
-                <span class="badge badge-dark">*Игры-Букмек.конторы*</span>
+                <span class="badge badge-dark">*Игры/Букмек.конторы*</span>
                 <hr> 
                 <li><img class="icon" src="img/fan-sport.com.ua.png" alt="github"><a href="https://fan-sport.com.ua?bf=5c6990af5f28e_515561215" target="_blank">fan-sport.com.ua</a></li>
                 <li><img class="icon" src="img/1xbetua.com.png" alt="github"><a href="https://1xbetua.com/?bf=5c6ae4a19a325_515575637" target="_blank">1xbetua.com</a></li>
@@ -144,10 +146,12 @@
                 <hr>
                 <li><img class="icon" src="img/letyshops.com.ico" alt="github"><a href="https://letyshops.com/ua/soc/sh-1?r=2739789" target="_blank">Letyshops.com</a><span class="opisi">Все дешевле</span></li>
                 <li><img class="icon" src="img/smarty.sale.ico" alt="github"><a href="https://smarty.sale/1197327" target="_blank">Smarty.sale</a><span class="opisi">Умные покупки</span></li>
-                <li><img class="icon" src="img/bonprix.ua.ico" alt="github"><a href="https://letyshops.com/r/bonprix-ua-4qh7st5csygwc8" target="_blank">bonprix.ua</a></li>
                 <li><img class="icon" src="img/rozetka.com.ua.ico" alt="github"><a href="https://letyshops.com/r/rozetka-4qh7st5csxa88w" target="_blank">rozetka.com.ua</a></li>
+                <li><img class="icon" src="img/allo.ua.png" alt="github"><a href="https://letyshops.com/r/allo-4qh7st5csxicso" target="_blank">allo.ua</a></li>
+                <li><img class="icon" src="img/eldorado.ua.ico" alt="github"><a href="https://letyshops.com/r/eldorado-ua-4qh7st5csxicso" target="_blank">eldorado.ua</a></li>
                 <li><img class="icon" src="img/moyo.ua.ico" alt="github"><a href="https://letyshops.com/r/moyo-ua-4qh7st5csxogcc" target="_blank">moyo.ua</a></li>
                 <li><img class="icon" src="img/xiaomi.ua.ico" alt="github"><a href="https://letyshops.com/r/xiaomi-ua-4qh7st5csy680o" target="_blank">xiaomi.ua</a></li>
+                <li><img class="icon" src="img/bonprix.ua.ico" alt="github"><a href="https://letyshops.com/r/bonprix-ua-4qh7st5csygwc8" target="_blank">bonprix.ua</a></li>
                 <li><img class="icon" src="img/apteka911.com.ua.ico" alt="github"><a href="https://letyshops.com/r/apteka-911-4qh7st5ct08woo" target="_blank">apteka911.com.ua</a></li>
               </ul>
             </div>
@@ -169,7 +173,7 @@
                 <li><img class="icon" src="img/speed2.ico" alt="github"><a href="http://speedtest.ukrtelecom.ua/" target="_blank">speedtest.ukrtelecom.ua</a></li>
               </ul>
               <ul id="">
-                <span class="badge badge-dark">*Городок-Новомиргород*</span>
+                <span class="badge badge-dark">*Городок/Новомиргород*</span>
                 <hr>
                 <li><img class="icon" src="img/sinoptik.ico" alt="sinoptik"><a href="https://sinoptik.ua/%D0%BF%D0%BE%D0%B3%D0%BE%D0%B4%D0%B0-%D0%BD%D0%BE%D0%B2%D0%BE%D0%BC%D0%B8%D1%80%D0%B3%D0%BE%D1%80%D0%BE%D0%B4" target="_blank">Sinoptik</a></li>
                 <li><img class="icon" src="img/rp5.ua.ico" alt="rp5.ua"><a href="http://rp5.ua/%D0%9F%D0%BE%D0%B3%D0%BE%D0%B4%D0%B0_%D0%B2_%D0%9D%D0%BE%D0%B2%D0%BE%D0%BC%D0%B8%D1%80%D0%B3%D0%BE%D1%80%D0%BE%D0%B4%D0%B5" target="_blank">Rp5.ua</a></li>
@@ -639,7 +643,7 @@
                 <li><img class="icon" src="img/moyo.ua.ico" alt="github"><a href="https://letyshops.com/r/moyo-ua-4qh7st5csxogcc" target="_blank">moyo.ua</a></li>
                 <li><img class="icon" src="img/stylus.ua.ico" alt="github"><a href="https://letyshops.com/r/stylus-4qh7st5csxogcc" target="_blank">stylus.ua</a></li>
                 <li><img class="icon" src="img/skidka.ua.ico" alt="github"><a href="https://letyshops.com/r/skidka-ua-4qh7st5csxs048" target="_blank">skidka.ua</a></li>
-                <li><img class="icon" src="img/privatmarket.ua.ico" alt="github"><a href="https://letyshops.com/r/privatmarket-4qh7st5csxwko0" target="_blank">privatmarket.ua</a></li>
+<!--                 <li><img class="icon" src="img/privatmarket.ua.ico" alt="github"><a href="https://letyshops.com/r/privatmarket-4qh7st5csxwko0" target="_blank">privatmarket.ua</a></li> -->
                 <li><img class="icon" src="img/foxtrot.com.ua.ico" alt="github"><a href="https://letyshops.com/r/fokstrot-ua-4qh7st5csxwko0" target="_blank">foxtrot.com.ua</a></li>
                 <li><img class="icon" src="img/f.ua.ico" alt="github"><a href="https://letyshops.com/r/f-ua-tot-samyi-magazin-4qh7st5csy04gw" target="_blank">f.ua</a></li>
                 <li><img class="icon" src="img/comfy.ua.ico" alt="github"><a href="https://letyshops.com/r/comfy-ua-4qh7st5csy2o8s" target="_blank">comfy.ua</a></li>
