--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
               <ul id="">
                 <span class="badge badge-dark">*Магазины*</span>
                 <hr>
-                <li><img class="icon" src="img/letyshops.com.ico" alt="github"><a href="https://letyshops.com/ua/soc/sh-1?r=2739789" target="_blank">Letyshops.com</a><span class="opisi">Все дешевле</span></li>
-                <li><img class="icon" src="img/smarty.sale.ico" alt="github"><a href="https://smarty.sale/1197327" target="_blank">Smarty.sale</a><span class="opisi">Умные покупки</span></li>
+                <li><img class="icon" src="img/letyshops.com.ico" alt="github"><a href="https://letyshops.com/ua/soc/sh-1?r=2739789" target="_blank">Letyshops`</a><span class="opisi">Все дешевле</span></li>
+                <li><img class="icon" src="img/smarty.sale.ico" alt="github"><a href="https://smarty.sale/1197327" target="_blank">Smarty.sale`</a><span class="opisi">Умные покупки</span></li>
                 <li><img class="icon" src="img/rozetka.com.ua.ico" alt="github"><a href="https://letyshops.com/r/rozetka-4qh7st5csxa88w" target="_blank">rozetka.com.ua</a></li>
                 <li><img class="icon" src="img/allo.ua.png" alt="github"><a href="https://letyshops.com/r/allo-4qh7st5csxicso" target="_blank">allo.ua</a></li>
                 <li><img class="icon" src="img/eldorado.ua.ico" alt="github"><a href="https://letyshops.com/r/eldorado-ua-4qh7st5csxicso" target="_blank">eldorado.ua</a></li>
@@ -602,8 +602,8 @@
               <ul id="">
                 <span class="badge badge-warning">*Возврат % с покупок*</span>
                 <hr>
-                <li><img class="icon" src="img/letyshops.com.ico" alt="github"><a href="https://letyshops.com/ua/soc/sh-1?r=2739789" target="_blank">Letyshops.com</a><span class="opisi">30%дешевле</span></li>
-                <li><img class="icon" src="img/smarty.sale.ico" alt="github"><a href="https://smarty.sale/1197327" target="_blank">Smarty.sale</a><span class="opisi">умные покупки</span></li>
+                <li><img class="icon" src="img/letyshops.com.ico" alt="github"><a href="https://letyshops.com/ua/soc/sh-1?r=2739789" target="_blank">Letyshops`</a><span class="opisi">30%дешевле</span></li>
+                <li><img class="icon" src="img/smarty.sale.ico" alt="github"><a href="https://smarty.sale/1197327" target="_blank">Smarty.sale`</a><span class="opisi">умные покупки</span></li>
               </ul>
               <ul id="">
                 <span class="badge badge-warning">*Анализатор покупок*</span>
@@ -1051,6 +1051,12 @@
                 <li><img class="icon" src="img/meta.ua.ico" alt="yandex"><a href="https://meta.ua/" target="_blank">Meta.ua</a></li>
                 <li><img class="icon" src="img/shukalka.com.ua.png" alt="yandex"><a href="https://shukalka.com.ua/" target="_blank">Shukalka.com.ua</a></li>
               </ul>
+              <ul id="">
+                <span class="badge badge-success">*Поисковики*</span>
+                <hr>
+			    <li><img class="icon" src="img/translate.google.com.ua.png" alt="yandex"><a href="https://translate.google.com.ua/" target="_blank">Переводчик Google</a></li>
+                <li><img class="icon" src="img/translate.ru.png" alt="yandex"><a href="https://www.translate.ru/" target="_blank">Переводчик PROMT</a></li>
+              </ul>			  
             </div>
 
             <div class="col-sm">
@@ -1087,6 +1093,9 @@
                 <li><img class="icon" src="img/meteoprog.ico" alt="meteoprog"><a href="https://www.meteoprog.ua/ru/review/Novomirgorod/" target="_blank">Meteoprog</a></li>
                 <li><img class="icon" src="img/weather.com.ico" alt="weather.com"><a href="https://weather.com/uk-UA/weather/hourbyhour/l/UPXX0695:1:UP" target="_blank">Weather.com</a></li>
                 <li><img class="icon" src="img/gismeteo.ico" alt="gismeteo"><a href="https://www.gismeteo.ua/weather-novomyrhorod-12104/gm/" target="_blank">Gismeteo</a></li>
+				
+				<li><img class="icon" src="img/vk.ico" alt="vk"><a href="https://vk.com/novomyrhorod_baraholka" target="_blank">БАРАХОЛКА</a><span class="opisi">нужен VPN</span></li>
+                <li><img class="icon" src="img/novomirgorod.com.png" alt="novomirgorod"><a href="http://novomirgorod.com" target="_blank">Новомиргород. Новини та події</a></li>
               </ul>
             </div>
 
