--- a/index.html
+++ b/index.html
@@ -76,12 +76,13 @@
 
             <div class="col-sm">
               <ul id="">
-                <span class="badge badge-dark">*Поиск/Перевод*</span>
+                <span class="badge badge-dark">*Поиск/Перевод/Граматика*</span>
                 <hr>
                 <li><img class="icon" src="img/google.ico" alt="google"><a href="https://www.google.com.ua/" target="_blank">Поиск Google</a></li>
                 <li><img class="icon" src="img/yandex.ico" alt="yandex"><a href="https://yandex.ua/" target="_blank">Поиск Yandex</a><span class="opisi">нужен VPN</span></li>
                 <li><img class="icon" src="img/translate.google.com.ua.png" alt="yandex"><a href="https://translate.google.com.ua/" target="_blank">Переводчик Google</a></li>
                 <li><img class="icon" src="img/translate.ru.png" alt="yandex"><a href="https://www.translate.ru/" target="_blank">Переводчик PROMT</a></li>
+                <li><img class="icon" src="img/languagetool.org.png" alt="yandex"><a href="https://languagetool.org/uk/" target="_blank">Граматика от languagetool</a></li>
               </ul>
               <ul id="">
                 <span class="badge badge-dark">*Социум*</span>
@@ -1053,11 +1054,16 @@
                 <li><img class="icon" src="img/shukalka.com.ua.png" alt="yandex"><a href="https://shukalka.com.ua/" target="_blank">Shukalka.com.ua</a></li>
               </ul>
               <ul id="">
-                <span class="badge badge-success">*Поисковики*</span>
+                <span class="badge badge-success">*Переводчики*</span>
                 <hr>
 			    <li><img class="icon" src="img/translate.google.com.ua.png" alt="yandex"><a href="https://translate.google.com.ua/" target="_blank">Переводчик Google</a></li>
                 <li><img class="icon" src="img/translate.ru.png" alt="yandex"><a href="https://www.translate.ru/" target="_blank">Переводчик PROMT</a></li>
-              </ul>			  
+              </ul>		
+              <ul id="">
+                <span class="badge badge-success">*Граматика*</span>
+                <hr>
+                <li><img class="icon" src="img/languagetool.org.png" alt="yandex"><a href="https://languagetool.org/uk/" target="_blank">Граматика от languagetool</a></li>			  
+              </ul>	
             </div>
 
             <div class="col-sm">
