--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
 
 
         <div class="tab-pane fade" id="news" role="tabpanel" aria-labelledby="news-tab">
-          <div class="row">раздел будет запущен/сформирован до 18.02.2019
+          <div class="row">раздел будет запущен/сформирован до 30.02.2019
 
             <!--             <div class="col-sm">
               <ul id="">
@@ -435,6 +435,10 @@
                 <hr>
                 <li><img class="icon" src="img/xtremex3.com.ico" alt="github"><a href="http://xtremex3.com/" target="_blank">xtremex3.com</a></li>
                 <li><img class="icon" src="img/z1.fm.ico" alt="github"><a href="https://z1.fm/" target="_blank">z1.fm</a></li>
+                <li><img class="icon" src="img/nnmclub.to.png" alt="github"><a href="http://nnmclub.to/forum/portal.php?c=25" target="_blank">nnmclub-Сборники</a><span class="opisi">нужен TORRENT</span></li>
+                <li><img class="icon" src="img/nnmclub.to.png" alt="github"><a href="http://nnmclub.to/forum/index.php?c=16" target="_blank">nnmclub-Вся.Музыка</a><span class="opisi">нужен TORRENT</span></li>
+
+
               </ul>
             </div>
 
